--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <script src="/vendor/aframe-v0.5.0.js"></script>
-    <script src="/bundle.js"></script>
+    <script src="../vendor/aframe-v0.5.0.js"></script>
+    <script src="../bundle.js"></script>
   </head>
   <body>
     <a-scene class="fullscreen" keyboard-shortcuts="enterVR:true;exitVR:true;resetSensor:true" vr-mode-ui="enabled:true" auto-enter-vr="display:GearVR; enabled:true"> 
@@ -26,10 +26,10 @@
                value: 1 Beef Steak (1lb/450g): \n1832 gal./6936 l of water"
         ></a-mixin>
 
-          <a-asset-item id="food" src="/assets/food.obj"></a-asset-item>
-          <a-asset-item id="food-mtl" src="/assets/food.mtl"></a-asset-item>
-          <!-- <a-asset-item id="water-normal" src="/assets/water.jpg"></a-asset-item> -->
-          <img id="water-normal" src="/assets/water.jpg"></img>
+          <a-asset-item id="food" src="./assets/food.obj"></a-asset-item>
+          <a-asset-item id="food-mtl" src="./assets/food.mtl"></a-asset-item>
+          <!-- <a-asset-item id="water-normal" src="./assets/water.jpg"></a-asset-item> -->
+          <img id="water-normal" src="./assets/water.jpg"></img>
       </a-assets>
 
       <a-entity>
