--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <script src="../vendor/aframe-v0.5.0.js"></script>
-    <script src="../bundle.js"></script>
+    <script src="./vendor/aframe-v0.5.0.js"></script>
+    <script src="./bundle.js"></script>
   </head>
   <body>
     <a-scene class="fullscreen" keyboard-shortcuts="enterVR:true;exitVR:true;resetSensor:true" vr-mode-ui="enabled:true" auto-enter-vr="display:GearVR; enabled:true"> 
