fix font pictures urls

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
         <a-mixin id="text-block-1"
           
           text="align: center; width: 4; color: #444444; opacity: 0.0; font: ./assets/roboto.json;
-               fontImage: /assets/roboto.png; shader: msdf;
+               fontImage: ./assets/roboto.png; shader: msdf;
                value: 12 Eggs: \n643 gal./2400 l of water"
         ></a-mixin>
         <a-mixin id="text-block-2"
           opacity="0.0"
           text="align: center; width: 4; color: #444444; opacity: 0.0; font: ./assets/roboto.json;
-               fontImage: /assets/roboto.png; shader: msdf;
+               fontImage: ./assets/roboto.png; shader: msdf;
                value: 3 Chocolate Bars: \n1347 gal./5100 l of water"
         ></a-mixin>
         <a-mixin id="text-block-3"
           opacity="0.0"
           text="align: center; width: 4; color: #444444; opacity: 0.0; font: ./assets/roboto.json;
-               fontImage: /assets/roboto.png; shader: msdf;
+               fontImage: ./assets/roboto.png; shader: msdf;
                value: 1 Beef Steak (1lb/450g): \n1832 gal./6936 l of water"
         ></a-mixin>
 
