--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </style>
   </head>
   <body>
-    <a-scene keyboard-shortcuts="enterVR:true;exitVR:true;resetSensor:true" embedded vr-mode-ui="enabled:true" auto-enter-vr="display:GearVR; enabled:true"> 
+    <a-scene keyboard-shortcuts="enterVR:true;exitVR:true;resetSensor:true" fullscreen vr-mode-ui="enabled:true" auto-enter-vr="display:GearVR; enabled:true"> 
 
       <a-assets>
         <a-mixin id="text-block-info"
